# Foldr

./: FOLDR_DOCS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/: FOLDR_DOCS.md  FOLDR_MANUAL_V4.1.md  foldr_v4_man.md  functionality.md
file_organizer/: cli.py  config.py  organizer.py
foldr/: __init__.py  ansi.py  cli.py  config.py  config_loader.py  dedup.py  empty_dirs.py  history.py  ignore.py  keys.py  logger.py  mime_detect.py  models.py  organizer.py  output.py  prefs.py  screen.py  term.py  tui.py  undo.py  watch.py  watches.py  widgets.py
