[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "foldr"
version     = "4.1.0"
description = "Smart file organizer — TUI + CLI, cross-platform, watch mode, full undo"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"
authors     = [{ name = "Muhammad Qasim", email = "amkassim444@gmail.com" }]
keywords    = ["foldr", "files", "organizer", "cli", "tui", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

# ── Core dependencies (always installed) ──────────────────────────────────────
dependencies = [
    # File system event watching — cross-OS native backends:
    #   Linux  : inotify
    #   macOS  : kqueue / FSEvents
    #   Windows: ReadDirectoryChangesW
    "watchdog>=4.0.0",

    # Better terminal tables (CLI history/dedup output)
    "tabulate>=0.9.0",

    # Windows: ANSI/VT colour support in older terminals (Win10 auto-enabled
    # via ctypes in term.py, but colorama is a safety net for older builds)
    "colorama>=0.4.6 ; platform_system == 'Windows'",
]

# ── Optional dependencies ──────────────────────────────────────────────────────
[project.optional-dependencies]

# TOML config support (Python 3.10 only; 3.11+ has tomllib in stdlib)
toml = [
    "tomli>=2.0.0 ; python_version < '3.11'",
]

# --smart flag: content-based MIME detection (beats extension-only)
smart = [
    "python-magic>=0.4.27 ; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14 ; platform_system == 'Windows'",
    # macOS note: also needs `brew install libmagic`
    # Linux note: also needs `sudo apt install libmagic1`
]

# Full install (everything above)
all = [
    "tomli>=2.0.0 ; python_version < '3.11'",
    "python-magic>=0.4.27 ; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14 ; platform_system == 'Windows'",
]

# ── Entry points ───────────────────────────────────────────────────────────────
[project.scripts]
foldr = "foldr.cli:main"

# ── Package discovery ──────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["foldr*"]

# ── Platform notes (not enforced, just documentation) ─────────────────────────
# Windows  : pip install foldr[all]
#            Works on Windows 10+ (build 14931+) for TUI.
#            Falls back to plain CLI on older Windows automatically.
#
# macOS    : pip install foldr[all]
#            For --smart: brew install libmagic
#
# Linux    : pip install foldr[all]
#            For --smart: sudo apt install libmagic1  (or distro equivalent)

[project.urls]
"Homepage"    = "https://github.com/qasimio/Foldr"
"Source Code" = "https://github.com/qasimio/Foldr"
"Bug Tracker" = "https://github.com/qasimio/Foldr/issues"