[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "foldr"
version         = "4.1.0"
description     = "Smart file organizer — CLI, cross-platform, watch mode, undo"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "Muhammad Qasim", email = "amkassim444@gmail.com" }]
keywords        = ["files", "organizer", "cli", "productivity", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

# ── Runtime dependencies ───────────────────────────────────────────────────────
#
# watchdog  — OS-native file system events for `foldr watch`
#             Linux   : inotify
#             macOS   : FSEvents / kqueue
#             Windows : ReadDirectoryChangesW
#
# tabulate  — table formatting for history / dedup output
#             (graceful plain-text fallback if absent — but output looks better with it)
#
# colorama  — Windows only: ANSI safety net for older terminals.
#             Windows 10+ is auto-enabled via ctypes in term.py;
#             colorama handles Win8/older PowerShell as a fallback.
#
dependencies = [
    "watchdog>=4.0.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6 ; platform_system == 'Windows'",
]

[project.optional-dependencies]
# TOML config support on Python 3.10
# (Python 3.11+ ships tomllib in the standard library — nothing to install)
toml = [
    "tomli>=2.0.1 ; python_version < '3.11'",
]

# --smart: detect file type by content rather than extension
# Also needs a system library — see README for per-OS install instructions
smart = [
    "python-magic>=0.4.27     ; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14 ; platform_system == 'Windows'",
]

# Everything at once
all = [
    "tomli>=2.0.1             ; python_version < '3.11'",
    "python-magic>=0.4.27     ; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14 ; platform_system == 'Windows'",
]

[project.scripts]
foldr = "foldr.cli:main"

[project.urls]
Homepage   = "https://github.com/qasimio/Foldr"
Repository = "https://github.com/qasimio/Foldr"
Issues     = "https://github.com/qasimio/Foldr/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["foldr*"]