[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "foldr"
version         = "0.2.1"
description     = "Clean folders instantly with preview and full undo — fast, safe, cross-platform."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
authors         = [{ name = "Muhammad Qasim", email = "amkassim444@gmail.com" }]
keywords        = ["files", "organizer", "cli", "productivity", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

# One install — everything included. No extras needed.
#
#   pip install foldr
#
dependencies = [
    "watchdog>=4.0.0",
    "tabulate>=0.9.0",
    "tomli>=2.0.1 ; python_version < '3.11'",
    "colorama>=0.4.6 ; platform_system == 'Windows'",
]

[project.scripts]
foldr = "foldr.cli:main"

[project.urls]
Homepage   = "https://github.com/qasimio/Foldr"
Repository = "https://github.com/qasimio/Foldr"
Issues     = "https://github.com/qasimio/Foldr/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["foldr*"]